--- a/site/每日英语/高频单词/index.html
+++ b/site/每日英语/高频单词/index.html
@@ -5151,6 +5151,174 @@
 <a id="__codelineno-0-210" name="__codelineno-0-210" href="#__codelineno-0-210"></a>
 <a id="__codelineno-0-211" name="__codelineno-0-211" href="#__codelineno-0-211"></a>poverty
 <a id="__codelineno-0-212" name="__codelineno-0-212" href="#__codelineno-0-212"></a>贫困、困难、缺少
+<a id="__codelineno-0-213" name="__codelineno-0-213" href="#__codelineno-0-213"></a>
+<a id="__codelineno-0-214" name="__codelineno-0-214" href="#__codelineno-0-214"></a>variety
+<a id="__codelineno-0-215" name="__codelineno-0-215" href="#__codelineno-0-215"></a>多样、种类、多样化
+<a id="__codelineno-0-216" name="__codelineno-0-216" href="#__codelineno-0-216"></a>
+<a id="__codelineno-0-217" name="__codelineno-0-217" href="#__codelineno-0-217"></a>bacteria
+<a id="__codelineno-0-218" name="__codelineno-0-218" href="#__codelineno-0-218"></a>细菌
+<a id="__codelineno-0-219" name="__codelineno-0-219" href="#__codelineno-0-219"></a>
+<a id="__codelineno-0-220" name="__codelineno-0-220" href="#__codelineno-0-220"></a>race
+<a id="__codelineno-0-221" name="__codelineno-0-221" href="#__codelineno-0-221"></a>种族、比赛
+<a id="__codelineno-0-222" name="__codelineno-0-222" href="#__codelineno-0-222"></a>
+<a id="__codelineno-0-223" name="__codelineno-0-223" href="#__codelineno-0-223"></a>attract
+<a id="__codelineno-0-224" name="__codelineno-0-224" href="#__codelineno-0-224"></a>吸引、引起
+<a id="__codelineno-0-225" name="__codelineno-0-225" href="#__codelineno-0-225"></a>
+<a id="__codelineno-0-226" name="__codelineno-0-226" href="#__codelineno-0-226"></a>drop
+<a id="__codelineno-0-227" name="__codelineno-0-227" href="#__codelineno-0-227"></a>推动、宣扬、下降，终止
+<a id="__codelineno-0-228" name="__codelineno-0-228" href="#__codelineno-0-228"></a>
+<a id="__codelineno-0-229" name="__codelineno-0-229" href="#__codelineno-0-229"></a>current
+<a id="__codelineno-0-230" name="__codelineno-0-230" href="#__codelineno-0-230"></a>现在的、流通的、通用的
+<a id="__codelineno-0-231" name="__codelineno-0-231" href="#__codelineno-0-231"></a>
+<a id="__codelineno-0-232" name="__codelineno-0-232" href="#__codelineno-0-232"></a>influence
+<a id="__codelineno-0-233" name="__codelineno-0-233" href="#__codelineno-0-233"></a>影响
+<a id="__codelineno-0-234" name="__codelineno-0-234" href="#__codelineno-0-234"></a>
+<a id="__codelineno-0-235" name="__codelineno-0-235" href="#__codelineno-0-235"></a>professional
+<a id="__codelineno-0-236" name="__codelineno-0-236" href="#__codelineno-0-236"></a>专业的，职业的，专业人员
+<a id="__codelineno-0-237" name="__codelineno-0-237" href="#__codelineno-0-237"></a>
+<a id="__codelineno-0-238" name="__codelineno-0-238" href="#__codelineno-0-238"></a>talent
+<a id="__codelineno-0-239" name="__codelineno-0-239" href="#__codelineno-0-239"></a>才能、天才
+<a id="__codelineno-0-240" name="__codelineno-0-240" href="#__codelineno-0-240"></a>
+<a id="__codelineno-0-241" name="__codelineno-0-241" href="#__codelineno-0-241"></a>advantage
+<a id="__codelineno-0-242" name="__codelineno-0-242" href="#__codelineno-0-242"></a>优势、利益、有利条件
+<a id="__codelineno-0-243" name="__codelineno-0-243" href="#__codelineno-0-243"></a>
+<a id="__codelineno-0-244" name="__codelineno-0-244" href="#__codelineno-0-244"></a>boost 
+<a id="__codelineno-0-245" name="__codelineno-0-245" href="#__codelineno-0-245"></a>促进、增加、推动
+<a id="__codelineno-0-246" name="__codelineno-0-246" href="#__codelineno-0-246"></a>
+<a id="__codelineno-0-247" name="__codelineno-0-247" href="#__codelineno-0-247"></a>deal
+<a id="__codelineno-0-248" name="__codelineno-0-248" href="#__codelineno-0-248"></a>发放、买卖、应对
+<a id="__codelineno-0-249" name="__codelineno-0-249" href="#__codelineno-0-249"></a>
+<a id="__codelineno-0-250" name="__codelineno-0-250" href="#__codelineno-0-250"></a>expand
+<a id="__codelineno-0-251" name="__codelineno-0-251" href="#__codelineno-0-251"></a>扩张、详述、发展、张开
+<a id="__codelineno-0-252" name="__codelineno-0-252" href="#__codelineno-0-252"></a>
+<a id="__codelineno-0-253" name="__codelineno-0-253" href="#__codelineno-0-253"></a>fear
+<a id="__codelineno-0-254" name="__codelineno-0-254" href="#__codelineno-0-254"></a>害怕、敬畏、担心
+<a id="__codelineno-0-255" name="__codelineno-0-255" href="#__codelineno-0-255"></a>
+<a id="__codelineno-0-256" name="__codelineno-0-256" href="#__codelineno-0-256"></a>monitor
+<a id="__codelineno-0-257" name="__codelineno-0-257" href="#__codelineno-0-257"></a>监视器、显示屏
+<a id="__codelineno-0-258" name="__codelineno-0-258" href="#__codelineno-0-258"></a>
+<a id="__codelineno-0-259" name="__codelineno-0-259" href="#__codelineno-0-259"></a>realize
+<a id="__codelineno-0-260" name="__codelineno-0-260" href="#__codelineno-0-260"></a>实现、认识到、了解
+<a id="__codelineno-0-261" name="__codelineno-0-261" href="#__codelineno-0-261"></a>
+<a id="__codelineno-0-262" name="__codelineno-0-262" href="#__codelineno-0-262"></a>imagine
+<a id="__codelineno-0-263" name="__codelineno-0-263" href="#__codelineno-0-263"></a>想象
+<a id="__codelineno-0-264" name="__codelineno-0-264" href="#__codelineno-0-264"></a>
+<a id="__codelineno-0-265" name="__codelineno-0-265" href="#__codelineno-0-265"></a>intelligence
+<a id="__codelineno-0-266" name="__codelineno-0-266" href="#__codelineno-0-266"></a>智力、智慧
+<a id="__codelineno-0-267" name="__codelineno-0-267" href="#__codelineno-0-267"></a>
+<a id="__codelineno-0-268" name="__codelineno-0-268" href="#__codelineno-0-268"></a>region
+<a id="__codelineno-0-269" name="__codelineno-0-269" href="#__codelineno-0-269"></a>地区、范围、部位
+<a id="__codelineno-0-270" name="__codelineno-0-270" href="#__codelineno-0-270"></a>
+<a id="__codelineno-0-271" name="__codelineno-0-271" href="#__codelineno-0-271"></a>source
+<a id="__codelineno-0-272" name="__codelineno-0-272" href="#__codelineno-0-272"></a>来源、水源、原始资料
+<a id="__codelineno-0-273" name="__codelineno-0-273" href="#__codelineno-0-273"></a>
+<a id="__codelineno-0-274" name="__codelineno-0-274" href="#__codelineno-0-274"></a>suffer
+<a id="__codelineno-0-275" name="__codelineno-0-275" href="#__codelineno-0-275"></a>遭受、忍受、经历
+<a id="__codelineno-0-276" name="__codelineno-0-276" href="#__codelineno-0-276"></a>
+<a id="__codelineno-0-277" name="__codelineno-0-277" href="#__codelineno-0-277"></a>available
+<a id="__codelineno-0-278" name="__codelineno-0-278" href="#__codelineno-0-278"></a>可获得的、有空的
+<a id="__codelineno-0-279" name="__codelineno-0-279" href="#__codelineno-0-279"></a>
+<a id="__codelineno-0-280" name="__codelineno-0-280" href="#__codelineno-0-280"></a>concept
+<a id="__codelineno-0-281" name="__codelineno-0-281" href="#__codelineno-0-281"></a>观念、概念
+<a id="__codelineno-0-282" name="__codelineno-0-282" href="#__codelineno-0-282"></a>
+<a id="__codelineno-0-283" name="__codelineno-0-283" href="#__codelineno-0-283"></a>contact
+<a id="__codelineno-0-284" name="__codelineno-0-284" href="#__codelineno-0-284"></a>接触、联系
+<a id="__codelineno-0-285" name="__codelineno-0-285" href="#__codelineno-0-285"></a>
+<a id="__codelineno-0-286" name="__codelineno-0-286" href="#__codelineno-0-286"></a>cultural
+<a id="__codelineno-0-287" name="__codelineno-0-287" href="#__codelineno-0-287"></a>文化的、教养的
+<a id="__codelineno-0-288" name="__codelineno-0-288" href="#__codelineno-0-288"></a>
+<a id="__codelineno-0-289" name="__codelineno-0-289" href="#__codelineno-0-289"></a>director
+<a id="__codelineno-0-290" name="__codelineno-0-290" href="#__codelineno-0-290"></a>主任、主管、导演
+<a id="__codelineno-0-291" name="__codelineno-0-291" href="#__codelineno-0-291"></a>
+<a id="__codelineno-0-292" name="__codelineno-0-292" href="#__codelineno-0-292"></a>disaster
+<a id="__codelineno-0-293" name="__codelineno-0-293" href="#__codelineno-0-293"></a>灾难、不幸
+<a id="__codelineno-0-294" name="__codelineno-0-294" href="#__codelineno-0-294"></a>
+<a id="__codelineno-0-295" name="__codelineno-0-295" href="#__codelineno-0-295"></a>fix
+<a id="__codelineno-0-296" name="__codelineno-0-296" href="#__codelineno-0-296"></a>固定、维修、安排、确定
+<a id="__codelineno-0-297" name="__codelineno-0-297" href="#__codelineno-0-297"></a>
+<a id="__codelineno-0-298" name="__codelineno-0-298" href="#__codelineno-0-298"></a>present
+<a id="__codelineno-0-299" name="__codelineno-0-299" href="#__codelineno-0-299"></a>现在的、出席的、礼物、目前
+<a id="__codelineno-0-300" name="__codelineno-0-300" href="#__codelineno-0-300"></a>
+<a id="__codelineno-0-301" name="__codelineno-0-301" href="#__codelineno-0-301"></a>promote
+<a id="__codelineno-0-302" name="__codelineno-0-302" href="#__codelineno-0-302"></a>促进、提升、推销
+<a id="__codelineno-0-303" name="__codelineno-0-303" href="#__codelineno-0-303"></a>
+<a id="__codelineno-0-304" name="__codelineno-0-304" href="#__codelineno-0-304"></a>damage
+<a id="__codelineno-0-305" name="__codelineno-0-305" href="#__codelineno-0-305"></a>损害、损毁
+<a id="__codelineno-0-306" name="__codelineno-0-306" href="#__codelineno-0-306"></a>
+<a id="__codelineno-0-307" name="__codelineno-0-307" href="#__codelineno-0-307"></a>deliver
+<a id="__codelineno-0-308" name="__codelineno-0-308" href="#__codelineno-0-308"></a>发表、推送、交付
+<a id="__codelineno-0-309" name="__codelineno-0-309" href="#__codelineno-0-309"></a>
+<a id="__codelineno-0-310" name="__codelineno-0-310" href="#__codelineno-0-310"></a>genetic
+<a id="__codelineno-0-311" name="__codelineno-0-311" href="#__codelineno-0-311"></a>遗传的、基因的、起源的
+<a id="__codelineno-0-312" name="__codelineno-0-312" href="#__codelineno-0-312"></a>
+<a id="__codelineno-0-313" name="__codelineno-0-313" href="#__codelineno-0-313"></a>interview
+<a id="__codelineno-0-314" name="__codelineno-0-314" href="#__codelineno-0-314"></a>接见、采访、面试
+<a id="__codelineno-0-315" name="__codelineno-0-315" href="#__codelineno-0-315"></a>
+<a id="__codelineno-0-316" name="__codelineno-0-316" href="#__codelineno-0-316"></a>investment
+<a id="__codelineno-0-317" name="__codelineno-0-317" href="#__codelineno-0-317"></a>投资、投入
+<a id="__codelineno-0-318" name="__codelineno-0-318" href="#__codelineno-0-318"></a>
+<a id="__codelineno-0-319" name="__codelineno-0-319" href="#__codelineno-0-319"></a>supply
+<a id="__codelineno-0-320" name="__codelineno-0-320" href="#__codelineno-0-320"></a>供给、提供
+<a id="__codelineno-0-321" name="__codelineno-0-321" href="#__codelineno-0-321"></a>
+<a id="__codelineno-0-322" name="__codelineno-0-322" href="#__codelineno-0-322"></a>conduct
+<a id="__codelineno-0-323" name="__codelineno-0-323" href="#__codelineno-0-323"></a>组织、实施、指挥、引导
+<a id="__codelineno-0-324" name="__codelineno-0-324" href="#__codelineno-0-324"></a>
+<a id="__codelineno-0-325" name="__codelineno-0-325" href="#__codelineno-0-325"></a>determine
+<a id="__codelineno-0-326" name="__codelineno-0-326" href="#__codelineno-0-326"></a>决定、确定
+<a id="__codelineno-0-327" name="__codelineno-0-327" href="#__codelineno-0-327"></a>
+<a id="__codelineno-0-328" name="__codelineno-0-328" href="#__codelineno-0-328"></a>feature
+<a id="__codelineno-0-329" name="__codelineno-0-329" href="#__codelineno-0-329"></a>特色、特征、容貌
+<a id="__codelineno-0-330" name="__codelineno-0-330" href="#__codelineno-0-330"></a>
+<a id="__codelineno-0-331" name="__codelineno-0-331" href="#__codelineno-0-331"></a>involve
+<a id="__codelineno-0-332" name="__codelineno-0-332" href="#__codelineno-0-332"></a>包含、牵涉、使陷于
+<a id="__codelineno-0-333" name="__codelineno-0-333" href="#__codelineno-0-333"></a>
+<a id="__codelineno-0-334" name="__codelineno-0-334" href="#__codelineno-0-334"></a>occur
+<a id="__codelineno-0-335" name="__codelineno-0-335" href="#__codelineno-0-335"></a>发生、出现、存在
+<a id="__codelineno-0-336" name="__codelineno-0-336" href="#__codelineno-0-336"></a>
+<a id="__codelineno-0-337" name="__codelineno-0-337" href="#__codelineno-0-337"></a>purchase
+<a id="__codelineno-0-338" name="__codelineno-0-338" href="#__codelineno-0-338"></a>购买、获得
+<a id="__codelineno-0-339" name="__codelineno-0-339" href="#__codelineno-0-339"></a>
+<a id="__codelineno-0-340" name="__codelineno-0-340" href="#__codelineno-0-340"></a>vehicle
+<a id="__codelineno-0-341" name="__codelineno-0-341" href="#__codelineno-0-341"></a>车辆、工具、交通工具
+<a id="__codelineno-0-342" name="__codelineno-0-342" href="#__codelineno-0-342"></a>
+<a id="__codelineno-0-343" name="__codelineno-0-343" href="#__codelineno-0-343"></a>recovery
+<a id="__codelineno-0-344" name="__codelineno-0-344" href="#__codelineno-0-344"></a>恢复、复原、痊愈
+<a id="__codelineno-0-345" name="__codelineno-0-345" href="#__codelineno-0-345"></a>
+<a id="__codelineno-0-346" name="__codelineno-0-346" href="#__codelineno-0-346"></a>draw
+<a id="__codelineno-0-347" name="__codelineno-0-347" href="#__codelineno-0-347"></a>画、拉，吸引
+<a id="__codelineno-0-348" name="__codelineno-0-348" href="#__codelineno-0-348"></a>
+<a id="__codelineno-0-349" name="__codelineno-0-349" href="#__codelineno-0-349"></a>journal
+<a id="__codelineno-0-350" name="__codelineno-0-350" href="#__codelineno-0-350"></a>日报、杂志、日记
+<a id="__codelineno-0-351" name="__codelineno-0-351" href="#__codelineno-0-351"></a>
+<a id="__codelineno-0-352" name="__codelineno-0-352" href="#__codelineno-0-352"></a>majority
+<a id="__codelineno-0-353" name="__codelineno-0-353" href="#__codelineno-0-353"></a>多数
+<a id="__codelineno-0-354" name="__codelineno-0-354" href="#__codelineno-0-354"></a>
+<a id="__codelineno-0-355" name="__codelineno-0-355" href="#__codelineno-0-355"></a>mission
+<a id="__codelineno-0-356" name="__codelineno-0-356" href="#__codelineno-0-356"></a>使命、任务
+<a id="__codelineno-0-357" name="__codelineno-0-357" href="#__codelineno-0-357"></a>
+<a id="__codelineno-0-358" name="__codelineno-0-358" href="#__codelineno-0-358"></a>prefer
+<a id="__codelineno-0-359" name="__codelineno-0-359" href="#__codelineno-0-359"></a>更喜欢、宁愿、提出
+<a id="__codelineno-0-360" name="__codelineno-0-360" href="#__codelineno-0-360"></a>
+<a id="__codelineno-0-361" name="__codelineno-0-361" href="#__codelineno-0-361"></a>status
+<a id="__codelineno-0-362" name="__codelineno-0-362" href="#__codelineno-0-362"></a>地位、状态
+<a id="__codelineno-0-363" name="__codelineno-0-363" href="#__codelineno-0-363"></a>
+<a id="__codelineno-0-364" name="__codelineno-0-364" href="#__codelineno-0-364"></a>strategy
+<a id="__codelineno-0-365" name="__codelineno-0-365" href="#__codelineno-0-365"></a>战略、策划
+<a id="__codelineno-0-366" name="__codelineno-0-366" href="#__codelineno-0-366"></a>
+<a id="__codelineno-0-367" name="__codelineno-0-367" href="#__codelineno-0-367"></a>surface
+<a id="__codelineno-0-368" name="__codelineno-0-368" href="#__codelineno-0-368"></a>表面、表层、外观
+<a id="__codelineno-0-369" name="__codelineno-0-369" href="#__codelineno-0-369"></a>
+<a id="__codelineno-0-370" name="__codelineno-0-370" href="#__codelineno-0-370"></a>appeal
+<a id="__codelineno-0-371" name="__codelineno-0-371" href="#__codelineno-0-371"></a>呼吁、恳求、上述
+<a id="__codelineno-0-372" name="__codelineno-0-372" href="#__codelineno-0-372"></a>
+<a id="__codelineno-0-373" name="__codelineno-0-373" href="#__codelineno-0-373"></a>consumption
+<a id="__codelineno-0-374" name="__codelineno-0-374" href="#__codelineno-0-374"></a>消费、消耗
+<a id="__codelineno-0-375" name="__codelineno-0-375" href="#__codelineno-0-375"></a>
+<a id="__codelineno-0-376" name="__codelineno-0-376" href="#__codelineno-0-376"></a>decline
+<a id="__codelineno-0-377" name="__codelineno-0-377" href="#__codelineno-0-377"></a>下降、衰退
+<a id="__codelineno-0-378" name="__codelineno-0-378" href="#__codelineno-0-378"></a>
+<a id="__codelineno-0-379" name="__codelineno-0-379" href="#__codelineno-0-379"></a>figure
+<a id="__codelineno-0-380" name="__codelineno-0-380" href="#__codelineno-0-380"></a>数字、任务、图形、计算、出现
 </code></pre></div>
 
 
