--- a/site/每日英语/高频单词/index.html
+++ b/site/每日英语/高频单词/index.html
@@ -5319,6 +5319,33 @@
 <a id="__codelineno-0-378" name="__codelineno-0-378" href="#__codelineno-0-378"></a>
 <a id="__codelineno-0-379" name="__codelineno-0-379" href="#__codelineno-0-379"></a>figure
 <a id="__codelineno-0-380" name="__codelineno-0-380" href="#__codelineno-0-380"></a>数字、任务、图形、计算、出现
+<a id="__codelineno-0-381" name="__codelineno-0-381" href="#__codelineno-0-381"></a>
+<a id="__codelineno-0-382" name="__codelineno-0-382" href="#__codelineno-0-382"></a>labor
+<a id="__codelineno-0-383" name="__codelineno-0-383" href="#__codelineno-0-383"></a>劳动、工作、劳工
+<a id="__codelineno-0-384" name="__codelineno-0-384" href="#__codelineno-0-384"></a>
+<a id="__codelineno-0-385" name="__codelineno-0-385" href="#__codelineno-0-385"></a>motivate
+<a id="__codelineno-0-386" name="__codelineno-0-386" href="#__codelineno-0-386"></a>刺激、使有动机
+<a id="__codelineno-0-387" name="__codelineno-0-387" href="#__codelineno-0-387"></a>
+<a id="__codelineno-0-388" name="__codelineno-0-388" href="#__codelineno-0-388"></a>native
+<a id="__codelineno-0-389" name="__codelineno-0-389" href="#__codelineno-0-389"></a>本国的、天然的、本地人
+<a id="__codelineno-0-390" name="__codelineno-0-390" href="#__codelineno-0-390"></a>
+<a id="__codelineno-0-391" name="__codelineno-0-391" href="#__codelineno-0-391"></a>overall
+<a id="__codelineno-0-392" name="__codelineno-0-392" href="#__codelineno-0-392"></a>全部的、全体的
+<a id="__codelineno-0-393" name="__codelineno-0-393" href="#__codelineno-0-393"></a>
+<a id="__codelineno-0-394" name="__codelineno-0-394" href="#__codelineno-0-394"></a>reserve
+<a id="__codelineno-0-395" name="__codelineno-0-395" href="#__codelineno-0-395"></a>预订、预备、拥有
+<a id="__codelineno-0-396" name="__codelineno-0-396" href="#__codelineno-0-396"></a>
+<a id="__codelineno-0-397" name="__codelineno-0-397" href="#__codelineno-0-397"></a>senior
+<a id="__codelineno-0-398" name="__codelineno-0-398" href="#__codelineno-0-398"></a>高级的、年长的
+<a id="__codelineno-0-399" name="__codelineno-0-399" href="#__codelineno-0-399"></a>
+<a id="__codelineno-0-400" name="__codelineno-0-400" href="#__codelineno-0-400"></a>solution
+<a id="__codelineno-0-401" name="__codelineno-0-401" href="#__codelineno-0-401"></a>解决方案、溶解、解答
+<a id="__codelineno-0-402" name="__codelineno-0-402" href="#__codelineno-0-402"></a>
+<a id="__codelineno-0-403" name="__codelineno-0-403" href="#__codelineno-0-403"></a>survive
+<a id="__codelineno-0-404" name="__codelineno-0-404" href="#__codelineno-0-404"></a>幸存、生还、幸免于
+<a id="__codelineno-0-405" name="__codelineno-0-405" href="#__codelineno-0-405"></a>
+<a id="__codelineno-0-406" name="__codelineno-0-406" href="#__codelineno-0-406"></a>specific
+<a id="__codelineno-0-407" name="__codelineno-0-407" href="#__codelineno-0-407"></a>特殊的、特定的、明确的、详细的
 </code></pre></div>
 
 
