--- a/site/筑基期/static_assert/index.html
+++ b/site/筑基期/static_assert/index.html
@@ -5086,6 +5086,7 @@
 <a id="__codelineno-2-6" name="__codelineno-2-6" href="#__codelineno-2-6"></a><span class="w">    </span><span class="k">return</span><span class="w"> </span><span class="mi">0</span><span class="p">;</span>
 <a id="__codelineno-2-7" name="__codelineno-2-7" href="#__codelineno-2-7"></a><span class="p">}</span>
 </code></pre></div>
+<p>『注意』：<code>static_assert</code> 只能用于常量的比较，如果出现了变量就会报错！！！</p>
 
 
 
