--- a/site/筑基期/noexcept/index.html
+++ b/site/筑基期/noexcept/index.html
@@ -5093,7 +5093,7 @@
 <a id="__codelineno-0-27" name="__codelineno-0-27" href="#__codelineno-0-27"></a><span class="p">}</span>
 </code></pre></div>
 <p>由于 <code>func1</code> 函数抛出了一个异常，所以 <code>func2</code> 函数继续向上抛出异常，直到被 <code>catch</code> 捕获为止</p>
-<p>为了停止异常继续向上传播，<code>func3</code> 用 <code>noexcept</code> 修饰，直接强制中端程序并报错！</p>
+<p>为了停止异常继续向上传播，<code>func3</code> 用 <code>noexcept</code> 修饰，直接强制中断程序并报错！</p>
 
 
 
