--- a/site/每日英语/高频单词/index.html
+++ b/site/每日英语/高频单词/index.html
@@ -5490,6 +5490,69 @@
 <a id="__codelineno-0-405" name="__codelineno-0-405" href="#__codelineno-0-405"></a>
 <a id="__codelineno-0-406" name="__codelineno-0-406" href="#__codelineno-0-406"></a>specific
 <a id="__codelineno-0-407" name="__codelineno-0-407" href="#__codelineno-0-407"></a>特殊的、特定的、明确的、详细的
+<a id="__codelineno-0-408" name="__codelineno-0-408" href="#__codelineno-0-408"></a>
+<a id="__codelineno-0-409" name="__codelineno-0-409" href="#__codelineno-0-409"></a>adopt
+<a id="__codelineno-0-410" name="__codelineno-0-410" href="#__codelineno-0-410"></a>采取、接受、收养
+<a id="__codelineno-0-411" name="__codelineno-0-411" href="#__codelineno-0-411"></a>
+<a id="__codelineno-0-412" name="__codelineno-0-412" href="#__codelineno-0-412"></a>argue
+<a id="__codelineno-0-413" name="__codelineno-0-413" href="#__codelineno-0-413"></a>争论、辩论
+<a id="__codelineno-0-414" name="__codelineno-0-414" href="#__codelineno-0-414"></a>
+<a id="__codelineno-0-415" name="__codelineno-0-415" href="#__codelineno-0-415"></a>crowd
+<a id="__codelineno-0-416" name="__codelineno-0-416" href="#__codelineno-0-416"></a>人群、观众、众多
+<a id="__codelineno-0-417" name="__codelineno-0-417" href="#__codelineno-0-417"></a>
+<a id="__codelineno-0-418" name="__codelineno-0-418" href="#__codelineno-0-418"></a>despite
+<a id="__codelineno-0-419" name="__codelineno-0-419" href="#__codelineno-0-419"></a>即使、尽管
+<a id="__codelineno-0-420" name="__codelineno-0-420" href="#__codelineno-0-420"></a>
+<a id="__codelineno-0-421" name="__codelineno-0-421" href="#__codelineno-0-421"></a>fund
+<a id="__codelineno-0-422" name="__codelineno-0-422" href="#__codelineno-0-422"></a>基金、资金、存款
+<a id="__codelineno-0-423" name="__codelineno-0-423" href="#__codelineno-0-423"></a>
+<a id="__codelineno-0-424" name="__codelineno-0-424" href="#__codelineno-0-424"></a>pattern
+<a id="__codelineno-0-425" name="__codelineno-0-425" href="#__codelineno-0-425"></a>模式、图案、样品
+<a id="__codelineno-0-426" name="__codelineno-0-426" href="#__codelineno-0-426"></a>
+<a id="__codelineno-0-427" name="__codelineno-0-427" href="#__codelineno-0-427"></a>regard
+<a id="__codelineno-0-428" name="__codelineno-0-428" href="#__codelineno-0-428"></a>注意、尊重、凝视
+<a id="__codelineno-0-429" name="__codelineno-0-429" href="#__codelineno-0-429"></a>
+<a id="__codelineno-0-430" name="__codelineno-0-430" href="#__codelineno-0-430"></a>review
+<a id="__codelineno-0-431" name="__codelineno-0-431" href="#__codelineno-0-431"></a>回顾、检查、复习
+<a id="__codelineno-0-432" name="__codelineno-0-432" href="#__codelineno-0-432"></a>
+<a id="__codelineno-0-433" name="__codelineno-0-433" href="#__codelineno-0-433"></a>shortage
+<a id="__codelineno-0-434" name="__codelineno-0-434" href="#__codelineno-0-434"></a>缺乏、缺少
+<a id="__codelineno-0-435" name="__codelineno-0-435" href="#__codelineno-0-435"></a>
+<a id="__codelineno-0-436" name="__codelineno-0-436" href="#__codelineno-0-436"></a>threat
+<a id="__codelineno-0-437" name="__codelineno-0-437" href="#__codelineno-0-437"></a>威胁、恐吓、凶兆
+<a id="__codelineno-0-438" name="__codelineno-0-438" href="#__codelineno-0-438"></a>
+<a id="__codelineno-0-439" name="__codelineno-0-439" href="#__codelineno-0-439"></a>tobacco
+<a id="__codelineno-0-440" name="__codelineno-0-440" href="#__codelineno-0-440"></a>烟草、烟叶
+<a id="__codelineno-0-441" name="__codelineno-0-441" href="#__codelineno-0-441"></a>
+<a id="__codelineno-0-442" name="__codelineno-0-442" href="#__codelineno-0-442"></a>attend
+<a id="__codelineno-0-443" name="__codelineno-0-443" href="#__codelineno-0-443"></a>出席、致力于、照料、照顾
+<a id="__codelineno-0-444" name="__codelineno-0-444" href="#__codelineno-0-444"></a>
+<a id="__codelineno-0-445" name="__codelineno-0-445" href="#__codelineno-0-445"></a>commercial
+<a id="__codelineno-0-446" name="__codelineno-0-446" href="#__codelineno-0-446"></a>商业的、营利的
+<a id="__codelineno-0-447" name="__codelineno-0-447" href="#__codelineno-0-447"></a>
+<a id="__codelineno-0-448" name="__codelineno-0-448" href="#__codelineno-0-448"></a>crop
+<a id="__codelineno-0-449" name="__codelineno-0-449" href="#__codelineno-0-449"></a>产量、农作物、种植、收割
+<a id="__codelineno-0-450" name="__codelineno-0-450" href="#__codelineno-0-450"></a>
+<a id="__codelineno-0-451" name="__codelineno-0-451" href="#__codelineno-0-451"></a>establish
+<a id="__codelineno-0-452" name="__codelineno-0-452" href="#__codelineno-0-452"></a>建立、创立、确立
+<a id="__codelineno-0-453" name="__codelineno-0-453" href="#__codelineno-0-453"></a>
+<a id="__codelineno-0-454" name="__codelineno-0-454" href="#__codelineno-0-454"></a>facility
+<a id="__codelineno-0-455" name="__codelineno-0-455" href="#__codelineno-0-455"></a>设施、设备、容易、灵巧、才能
+<a id="__codelineno-0-456" name="__codelineno-0-456" href="#__codelineno-0-456"></a>
+<a id="__codelineno-0-457" name="__codelineno-0-457" href="#__codelineno-0-457"></a>maintain
+<a id="__codelineno-0-458" name="__codelineno-0-458" href="#__codelineno-0-458"></a>维持、继续、维修、主张
+<a id="__codelineno-0-459" name="__codelineno-0-459" href="#__codelineno-0-459"></a>
+<a id="__codelineno-0-460" name="__codelineno-0-460" href="#__codelineno-0-460"></a>official
+<a id="__codelineno-0-461" name="__codelineno-0-461" href="#__codelineno-0-461"></a>官方的、正式的、公务的
+<a id="__codelineno-0-462" name="__codelineno-0-462" href="#__codelineno-0-462"></a>
+<a id="__codelineno-0-463" name="__codelineno-0-463" href="#__codelineno-0-463"></a>previous
+<a id="__codelineno-0-464" name="__codelineno-0-464" href="#__codelineno-0-464"></a>以前的、早先的
+<a id="__codelineno-0-465" name="__codelineno-0-465" href="#__codelineno-0-465"></a>
+<a id="__codelineno-0-466" name="__codelineno-0-466" href="#__codelineno-0-466"></a>reveal
+<a id="__codelineno-0-467" name="__codelineno-0-467" href="#__codelineno-0-467"></a>显示、透露、揭露、泄露
+<a id="__codelineno-0-468" name="__codelineno-0-468" href="#__codelineno-0-468"></a>
+<a id="__codelineno-0-469" name="__codelineno-0-469" href="#__codelineno-0-469"></a>craft
+<a id="__codelineno-0-470" name="__codelineno-0-470" href="#__codelineno-0-470"></a>工艺、手艺、太空船
 </code></pre></div>
 
 
