--- a/site/每日英语/高频单词/index.html
+++ b/site/每日英语/高频单词/index.html
@@ -5553,6 +5553,45 @@
 <a id="__codelineno-0-468" name="__codelineno-0-468" href="#__codelineno-0-468"></a>
 <a id="__codelineno-0-469" name="__codelineno-0-469" href="#__codelineno-0-469"></a>craft
 <a id="__codelineno-0-470" name="__codelineno-0-470" href="#__codelineno-0-470"></a>工艺、手艺、太空船
+<a id="__codelineno-0-471" name="__codelineno-0-471" href="#__codelineno-0-471"></a>
+<a id="__codelineno-0-472" name="__codelineno-0-472" href="#__codelineno-0-472"></a>advice
+<a id="__codelineno-0-473" name="__codelineno-0-473" href="#__codelineno-0-473"></a>建议、忠告、劝告
+<a id="__codelineno-0-474" name="__codelineno-0-474" href="#__codelineno-0-474"></a>
+<a id="__codelineno-0-475" name="__codelineno-0-475" href="#__codelineno-0-475"></a>board
+<a id="__codelineno-0-476" name="__codelineno-0-476" href="#__codelineno-0-476"></a>上火车、飞机、船等
+<a id="__codelineno-0-477" name="__codelineno-0-477" href="#__codelineno-0-477"></a>
+<a id="__codelineno-0-478" name="__codelineno-0-478" href="#__codelineno-0-478"></a>conflict
+<a id="__codelineno-0-479" name="__codelineno-0-479" href="#__codelineno-0-479"></a>突、矛盾、斗争、争执
+<a id="__codelineno-0-480" name="__codelineno-0-480" href="#__codelineno-0-480"></a>
+<a id="__codelineno-0-481" name="__codelineno-0-481" href="#__codelineno-0-481"></a>consequence
+<a id="__codelineno-0-482" name="__codelineno-0-482" href="#__codelineno-0-482"></a>结果、重要性、推论
+<a id="__codelineno-0-483" name="__codelineno-0-483" href="#__codelineno-0-483"></a>
+<a id="__codelineno-0-484" name="__codelineno-0-484" href="#__codelineno-0-484"></a>crisis
+<a id="__codelineno-0-485" name="__codelineno-0-485" href="#__codelineno-0-485"></a>危机、决定性时刻、危机的
+<a id="__codelineno-0-486" name="__codelineno-0-486" href="#__codelineno-0-486"></a>
+<a id="__codelineno-0-487" name="__codelineno-0-487" href="#__codelineno-0-487"></a>emerge
+<a id="__codelineno-0-488" name="__codelineno-0-488" href="#__codelineno-0-488"></a>浮现、摆脱、暴露
+<a id="__codelineno-0-489" name="__codelineno-0-489" href="#__codelineno-0-489"></a>
+<a id="__codelineno-0-490" name="__codelineno-0-490" href="#__codelineno-0-490"></a>enhance
+<a id="__codelineno-0-491" name="__codelineno-0-491" href="#__codelineno-0-491"></a>提高、加强、增加
+<a id="__codelineno-0-492" name="__codelineno-0-492" href="#__codelineno-0-492"></a>
+<a id="__codelineno-0-493" name="__codelineno-0-493" href="#__codelineno-0-493"></a>explore
+<a id="__codelineno-0-494" name="__codelineno-0-494" href="#__codelineno-0-494"></a>探索、探测、探险
+<a id="__codelineno-0-495" name="__codelineno-0-495" href="#__codelineno-0-495"></a>
+<a id="__codelineno-0-496" name="__codelineno-0-496" href="#__codelineno-0-496"></a>resident
+<a id="__codelineno-0-497" name="__codelineno-0-497" href="#__codelineno-0-497"></a>居住的、定居的、常驻的
+<a id="__codelineno-0-498" name="__codelineno-0-498" href="#__codelineno-0-498"></a>
+<a id="__codelineno-0-499" name="__codelineno-0-499" href="#__codelineno-0-499"></a>seek
+<a id="__codelineno-0-500" name="__codelineno-0-500" href="#__codelineno-0-500"></a>寻求、寻找、探索、搜索
+<a id="__codelineno-0-501" name="__codelineno-0-501" href="#__codelineno-0-501"></a>
+<a id="__codelineno-0-502" name="__codelineno-0-502" href="#__codelineno-0-502"></a>spot
+<a id="__codelineno-0-503" name="__codelineno-0-503" href="#__codelineno-0-503"></a>地点、斑点、认出、弄脏
+<a id="__codelineno-0-504" name="__codelineno-0-504" href="#__codelineno-0-504"></a>
+<a id="__codelineno-0-505" name="__codelineno-0-505" href="#__codelineno-0-505"></a>struggle
+<a id="__codelineno-0-506" name="__codelineno-0-506" href="#__codelineno-0-506"></a>奋斗、斗争、搏斗
+<a id="__codelineno-0-507" name="__codelineno-0-507" href="#__codelineno-0-507"></a>
+<a id="__codelineno-0-508" name="__codelineno-0-508" href="#__codelineno-0-508"></a>urban
+<a id="__codelineno-0-509" name="__codelineno-0-509" href="#__codelineno-0-509"></a>城市的、住在都市的
 </code></pre></div>
 
 
